use generic name

--- a/sentimental_words.ipynb
+++ b/sentimental_words.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stone_id = \"3\"\n",
+    "book_id = \"3\"\n",
     "# harry potter and the sorcerer's stone = 3\n",
     "# twilight = 41865\n",
     "# the expanse = 8855321\n",
@@ -63,7 +63,7 @@
     "                reviews.append(review)\n",
     "    return reviews\n",
     "\n",
-    "reviews = get_reviews_from_book_id(stone_id)"
+    "reviews = get_reviews_from_book_id(book_id)"
    ]
   },
   {
