--- a/interpretable_summarizers.ipynb
+++ b/interpretable_summarizers.ipynb
@@ -9,8 +9,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-05-07 01:01:27.271226: W tensorflow/stream_executor/platform/default/dso_loader.cc:60] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-05-07 01:01:27.271260: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2022-05-13 10:16:04.568543: W tensorflow/stream_executor/platform/default/dso_loader.cc:60] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-05-13 10:16:04.568572: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
       "/usr/lib/python3/dist-packages/requests/__init__.py:89: RequestsDependencyWarning: urllib3 (1.26.9) or chardet (3.0.4) doesn't match a supported version!\n",
       "  warnings.warn(\"urllib3 ({}) or chardet ({}) doesn't match a supported \"\n"
      ]
@@ -136,7 +136,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████| 5/5 [00:01<00:00,  2.89it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████| 5/5 [00:01<00:00,  2.76it/s]\n"
      ]
     },
     {
@@ -177,7 +177,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████| 5/5 [00:10<00:00,  2.14s/it]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████| 5/5 [00:10<00:00,  2.10s/it]\n"
      ]
     }
    ],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,18 +292,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Hermione Granger': 'Hermione Granger',\n",
+       " 'Hermione': 'Hermione Granger',\n",
+       " 'J.K. Rowling': 'J.K Rowling',\n",
+       " \"J.K. Rowling's\": 'J.K Rowling',\n",
+       " 'J.K Rowling': 'J.K Rowling',\n",
+       " 'J. K. Rowling': 'J.K Rowling',\n",
+       " 'Rowling': 'J.K Rowling',\n",
+       " 'harry potter': 'Harry Potter',\n",
+       " \"Harry Potter's\": 'Harry Potter',\n",
+       " 'Harry Potter': 'Harry Potter',\n",
+       " 'Ron': 'Ron Weasley',\n",
+       " 'Ron Weasley': 'Ron Weasley',\n",
+       " 'Dumbledore': 'Dumbledore',\n",
+       " 'Voldemort': 'Voldemort',\n",
+       " 'Quidditch': 'Quidditch',\n",
+       " 'Hogwarts': 'Hogwarts',\n",
+       " 'Dursleys': 'Dursleys',\n",
+       " 'Jim Dale': 'Jim Dale',\n",
+       " 'Neville': 'Neville',\n",
+       " 'Harry': 'Harry'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "names_mapping"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Harry Potter 402\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "sequence item 0: expected str instance, list found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_614/2733240914.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m }\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mprint_descriptions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcharacter_descriptions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmin_descs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mextra_stopwords\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mextra_stopwords\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mprint_descriptions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maspect_descriptions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmin_descs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mextra_stopwords\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mextra_stopwords\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/mnt/c/Users/annar/Documents/linux_folder/erasmus/main.py\u001b[0m in \u001b[0;36mprint_descriptions\u001b[0;34m(descs, min_descs, extra_stopwords)\u001b[0m\n\u001b[1;32m     56\u001b[0m             \u001b[0mcollocation_threshold\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m             \u001b[0mcolor_func\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mword_to_color\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 58\u001b[0;31m         ).generate(\" \".join(descs))\n\u001b[0m\u001b[1;32m     59\u001b[0m         \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdpi\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m200\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m         \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwordcloud\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minterpolation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'bilinear'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: sequence item 0: expected str instance, list found"
+     ]
+    }
+   ],
    "source": [
     "extra_stopwords = {\n",
     "    \"character\", \"characters\", \"writer\", \"author\", \"one\", \"first\", \"second\", \"last\"\n",
